# EveryQuery

./: .gitignore  .pre-commit-config.yaml  :  LICENSE  README.md  conftest.py  env.yaml  environment.txt  environment.yml  experiment_registry.pkl  look_at_data.ipynb  make_code_sets.py  pyproject.toml  results  tasks  train.slurm  train_eq.slurm
.github/workflows/: python-build.yaml
configs/: config.yaml
experiments/: experiment.py
experiments/num_hidden_layers/: spec.json
install/: environment.yml  requirements.txt
logs/: stage_0_2374521.err  stage_0_2374521.out  stage_1_2404277.err  stage_1_2404277.out  stage_1_2405076.err  stage_1_2405076.out  stage_2_2405410.err  stage_2_2405410.out  stage_2_2407596.err  stage_2_2407596.out  stage_2_2695241.err  stage_2_2695241.out  stage_3_2409513.err  stage_3_2409513.out  stage_5_2445119.err  stage_5_2445119.out
scripts/: launch_sweep.sh  run_tasks.sh  sweep_agent.py  sweep_layers.sh  sweep_worker.sh  test_nccl.sh  train_eq.sh
source/: config.yaml  datamodule.py  dataset.py  lightning_module.py  model.py  tasks.py  test-data.py  train.py
src/: aces_test.py  dataset.py  estimate_query_prevalence.py  eval.py  eval_ecg_01.py  evaluation.py  experiment.py  make_code_sets.py  model.py  tokenize.sh  train.py  utils.py
src/EveryQuery/: README.md  config.yaml  dataset.py  model.py  tasks.py
src/configs/: aces_imminent_mortality.yaml  data_preprocessing.yaml  eval.yaml  mgb.yaml
src/configs/data/: everyquery.yaml  everyquery_dataset.yaml
src/configs/data/codes/: N_1.yaml  N_10.yaml  N_100.yaml  N_1000.yaml  N_10000.yaml  N_3.yaml  N_5.yaml  N_8.yaml  hold_out.yaml  shuffled_codes_seed_140799.yaml  shuffled_seed_140799.yaml  stage_0.yaml  stage_1.yaml  stage_2.yaml  stage_3.yaml  stage_4.yaml  stage_5.yaml  stage_6.yaml
src/configs/experiment/: experiment.yaml  supervised1.yaml  supervised2.yaml
src/configs/model/: everyquery.yaml
src/configs/transforms/: extract_mgb.yaml  extract_mgb_ecg.yaml  extract_mgb_lvef.yaml  local_parallelism_runner.yaml  mgb.yaml  mgb_ecg.yaml  mgb_lvef.yaml  preprocess.yaml
src/every_query/: README.md  _demo_train.yaml  config.yaml  dataset.py  eval.py  eval_composite.py  eval_config.yaml  lightning_module.py  lit_datamodule.py  model.py  process_composite.py  query_codes  tasks.py  tasks_config.yaml  tasks_reference.py  train.py
src/every_query/aces_to_eq/: aces_to_eq.py  config.yaml
src/every_query/eval_suite/: README.md  gen_index_times.py  gen_task.py
src/every_query/process_composite/: eval_composite.py  get_per_code_from_composite.py  process_composite.py  process_composite_config.yaml
src/every_query/sample_codes/: sample_embedding_codes.py  sample_eq_train_eval_codes.py  sample_eval_codes.py  sample_train_codes.py
src/every_query/train_codes/: 10000_ID__03b39cc59fb1.yaml  10000_ID__8db2be6fadf8.yaml  10000_ID__cee85062a596.yaml  10000_ID__e267abdbc547.yaml  10000_ID__fef969fa50be.yaml
src/every_query/utils/: codes.py
src/models/: everyquery.py  mlp.py
tests/: test_collate_tasks.py  test_dataset_logic.py  test_eval_suite.py  test_lightning_logic.py  test_model_logic.py  test_tasks.py  test_train_cli.py  test_training.py
(+9 files in other folders)
