[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EveryQuery"
dynamic = ["version"] # Makes setuptools-scm manage the version
authors = [
  {name="Payal Chandak", email="payal.chandak@gmail.com"},
  {name="Matthew McDermott", email="mattmcdermott8@gmail.com"},
  {name="Gregory Kondas", email="gregkondas9@gmail.com"},
]
description = "A framework for training and evaluating foundation models, using the MEDS ecosystem for data processing and PyTorch Lightning for training."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Change if not using MIT license
    "Operating System :: OS Independent",
]
dependencies = [
  "polars~=1.30.0",
  "pyarrow",
  "hydra-core",
  "numpy",
  "meds~=0.4.0",
  "filelock",
  "pytest",
  "MEDS-transforms~=0.5.2",
  "meds-torch-data[lightning]~=0.6.3",
  "transformers",
  "torch",
  "torchmetrics",
  "lightning~=2.5.1",
  "dotenv>=0.9.9",
  "scikit-learn",
] # Add your runtime dependencies here

[dependency-groups]
dev = [
  "pre-commit<4", "ruff", "pytest", "pytest-cov", "pretty-print-directory", "meds_testing_helpers~=0.3.0",
  "yaml_to_disk"
] # Add your development (lint, test) dependencies here
docs = [] # Add your documentation dependencies here (I recommend mkdocs-material)

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
every_query = ["**/*.yaml"]

[tool.setuptools_scm] # Required for setuptools-scm to work, even if empty

[project.optional-dependencies] # Add any optional dependencies here, installable via `pip install .[extra]`

[project.scripts] # Add any console scripts here

[tool.pytest.ini_options] # Default pytest options
addopts = [
  "--color=yes",
  "--doctest-modules", # Ensures that doctest runs
  "--ignore=docs",
  "--ignore=AGENTS.md",
  "--ignore=CONTRIBUTORS.md",
  "--ignore=src/every_query/process_composite",
  "--ignore=src/every_query/sample_codes",
  "--doctest-glob=*.md",
]
markers = [] # Add any custom pytest markers here
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[project.urls]
Homepage = "https://github.com/payalchandak/EveryQuery"
Issues = "https://github.com/payalchandak/EveryQuery/issues"

[tool.ruff] # Ruff configuration for linting and formatting
target-version = "py312"
line-length = 110
extend-exclude = ["docs/index.md"]

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
"test_*" = ["DTZ001"]  # Ignore datetimez in test files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*MEDS*", "*NRT*", "D", "M", "L", "LR*"]
